# is_bot

./: README.md
helm/: Chart.yaml  values-local.yaml  values-prod.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  db-init-job.yaml  ingress.yaml  langchain-api.yaml  model-init-job.yaml  namespace.yaml  ollama.yaml  open-webui.yaml  postgresql.yaml  pvc.yaml  qdrant.yaml  secret.yaml  web.yaml
langchain-api/: Dockerfile  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt
langchain-api/docs/: acl_user.md
web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/prisma/: schema.prisma
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/conversations/: route.ts
web/src/app/api/conversations/[id]/: route.ts
web/src/app/chat/: NewChatRedirect.tsx  layout.tsx  page.tsx
web/src/app/chat/[id]/: page.tsx
web/src/components/: MatrixRain.tsx
web/src/components/chat/: ChatInput.tsx  ChatInterface.tsx  ChatWindow.tsx  MessageBubble.tsx
web/src/components/layout/: Sidebar.tsx
web/src/types/: index.ts
