[project]
name = "langchain-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-qdrant>=0.1.3",
    "langchain-community>=0.3.0",
    "qdrant-client>=1.11.0",
    "pypdf>=4.3.0",
    "python-multipart>=0.0.9",
]
